--- a/static/template/index.html
+++ b/static/template/index.html
@@ -1,23 +1,39 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Login</title>
+    <!-- Bootstrap CSS -->
+
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/styke.css' %}">
+    <!-- Font Awesome -->   
+
 </head>
 <body>
     <center>
-    <div>
-        <h2>Login</h2>
-        <form action="/login" method="post">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required><br><br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required><br><br>
-            <button type="submit">Login</button>
-        </form>
-    </div>
+
+        <div class="login-card text-center">
+        
+                 <h2 class="mb-4">Login</h2>
+                    <form>
+                        <div class="mb-3 text-start">
+                            <label for="username" class="form-label">Username:</label>
+                            <input type="text" class="form-control" id="username" name="username" required>
+                         </div>
+                        <div class="mb-3 text-start">
+                            <label for="password" class="form-label">Password:</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary ">Login</button>
+                </form>
+        
+        </div>
     </center>
+
 </body>
-</html>
+</html>  
